Fix: resolved the error, going to fix the UI/UX

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+html, body {
+  list-style: none;
+scroll-behavior: smooth;
+transition: all;
+}
